# mtb-master

./: Cargo.toml  Makefile.toml  README.md  mtb.wasm  rust-toolchain.toml
.github/workflows/: deploy.yml
assets/art/: mtb.aseprite
palette/: palette.txt
src/: background.rs  constants.rs  game.rs  geometry.rs  main.rs  obstacles.rs  player.rs  shaders.rs  state.rs  util.rs
src/shaders/: background.frag.glsl  default.vert.glsl  foreground.frag.glsl  postprocessing.frag.glsl
wasm/: index.html  manifest.webmanifest
