[package]
name = "mtb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.1"
include_path = "0.1.1"
lazy_static = "1.4.0"
macroquad = "0.3.10"
nanoserde = "0.1.29"
lerp = { version = "0.4", features = ["derive"] }

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
